# D2use

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  futureadditionimplemetation.txt  mvp.txt  pyproject.toml  requirements.txt
docs/: API_KEYS.md  ARCHITECTURE.md  GETTING_STARTED.md  LMSTUDIO_SETUP.md  TECHNICAL_DOCUMENTATION.md
src/: __init__.py  cli_v2.py  config.py  orchestrator_v2.py  schemas.py
src/adapters/: __init__.py  huggingface.py  kaggle.py
src/analysis/: ai_decision.py  config.py  profiler.py
src/api/: main.py
src/export/: auto_cleaner.py  format_converter.py  split_strategy.py
src/processing/: compliance_scorer.py  date_parser.py  encoding_detector.py  license_detector.py  schema_standardizer.py  stream_downloader.py
src/scraper/: __init__.py  circuit_breaker.py  crawlee_engine.py  intelligent_scraper.py  llm_extractor.py  simple_scraper.py
src/search/: __init__.py  multi_source.py  query_expander.py  search_bridge.py  serpapi_client.py  url_classifier.py
src/utils/: download_validator.py  error_messages.py  retry.py
tests/: debug_kaggle.py  demo_ai_intelligence.py  run_validation_summary.py  test_ai_intelligence.py  test_comprehensive_validation.py  test_date_parser.py  test_encoding_detector.py  test_kaggle.py  test_kaggle_direct.py  test_license_fixed.py  test_lmstudio_direct.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase3_phase5.py  test_phase4.py  test_phase5.py  test_retry.py
