[project]
name = "d2use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chardet>=5.2.0",
    "crawlee>=1.3.1",
    "datasets>=4.5.0",
    "fastapi[standard]>=0.128.0",
    "fastexcel>=0.19.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.3.5",
    "kaggle>=1.8.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
]
